--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "backdoor-producer"]
 	path = backdoor-producer
 	url = git@github.com:Alex-Andrv/backdoor-producer.git
+[submodule "minisat_with_redis_integration"]
+	path = minisat_with_redis_integration
+	url = git@github.com:Alex-Andrv/minisat_with_redis_integration.git
