some fix redis.conf

--- a/redis.conf
+++ b/redis.conf
@@ -3,4 +3,4 @@
 # Make sure the locale is installed on your system
 # Also, ensure that Redis has the necessary permissions to read it
 # If unsure, check the Redis user's permissions and the locale availability
-locale en_US.UTF-8
+locale-collate "C"
